docs/7.52/md/abapdata_referring.md
---
title: "DATA - TYPE, LIKE"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_shortref.htm) Syntax DATA var  TYPE LINE OF type  LIKE LINE OF dobj  VALUE  valIS INITIAL(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_
version: "7.52"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_referring.htm"
abapFile: "abapdata_referring.htm"
keywords: ["select", "do", "if", "case", "try", "data", "types", "internal-table", "abapdata", "referring"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_declarations.htm) →  [Data Types and Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentypes_and_objects.htm) →  [Declaring Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenobjects_statements.htm) →  [DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata.htm) → 

DATA - TYPE, LIKE

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_shortref.htm)

Syntax

DATA var *{* *{*TYPE *\[*LINE OF*\]* type*}*
         *|* *{*LIKE *\[*LINE OF*\]* dobj*}* *}*
         [*\[*VALUE  val*|**{*IS INITIAL*}**\]*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm)
         [*\[*READ-ONLY*\]*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm).

Effect

When a type data type or a dobj data object is specified, the data type of variable var is already fully defined before the declaration. The syntax and meaning of the additions TYPE and LIKE are exactly the same as the definition of the data types with [TYPES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_referring.htm), except for the following:

-   In the case of DATA, a standard table type with [generic primary table key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_keydef.htm) can be specified after TYPE. This creates a bound table type with a [standard key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstandard_key_glosry.htm "Glossary Entry").

-   In the case of DATA, a table type can be specified after TYPE that is generic with respect to its [secondary table key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensecondary_table_key_glosry.htm "Glossary Entry") (thanks to the addition [WITH FURTHER SECONDARY KEYS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_keydef.htm)). This type attribute is not relevant for the declared data object.

If TYPE and LIKE are not specified, a data object with the bound data type c of length 1 is created.

Notes

-   For internal tables, the declaration of the primary table key as a [standard key](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab_standard_key.htm) can be critical for various reasons. It is best to define the key fields explicitly instead. In the statement above, therefore, check whether a table with standard key is created by mistake if using a generic standard table type.
    
-   If an [enumerated type](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenenumerated_type_glosry.htm "Glossary Entry") is specified after TYPE or a data object with this type is specified after LIKE, an [enumerated variable](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_enum.htm) is created.
    

Example

Uses the TYPE addition to declare a work area for a [SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect.htm) statement. Uses the LIKE addition to declare a further data objects of the same type.

DATA wa TYPE scarr.
SELECT SINGLE \*
       FROM scarr
       WHERE carrid = 'BA'
       INTO @wa.
DATA buffer LIKE wa.
buffer = wa.